refactor: organize component company registration

--- a/devagro-frontend/src/app/core/components/auth/pages/sign/sign.component.html
+++ b/devagro-frontend/src/app/core/components/auth/pages/sign/sign.component.html
@@ -53,7 +53,7 @@
 
     <div class="sign-new-account">
       <span>Sua empresa não possui conta?</span>
-      <a routerLink="/admin/empresa-cadastro">Crie agora!</a>
+      <a routerLink="/empresa-cadastro">Crie agora!</a>
     </div>
   </div>
 </section>
