--- a/devagro-frontend/src/app/core/components/auth/pages/empresa-cadastro/empresa-cadastro.component.html
+++ b/devagro-frontend/src/app/core/components/auth/pages/empresa-cadastro/empresa-cadastro.component.html
@@ -13,7 +13,11 @@
           id="nome"
           placeholder="Nome da empresa"
         />
+
+        <label>CNPJ</label>
+        <p-inputMask styleClass="prime-input" mask="99.999.999/9999-99" placeholder="CNPJ"></p-inputMask>
       </form>
     </div>
   </div>
+
 </section>
