chore: add secondary green color

--- a/devagro-frontend/src/app/core/components/auth/pages/empresa-cadastro/empresa-cadastro.component.css
+++ b/devagro-frontend/src/app/core/components/auth/pages/empresa-cadastro/empresa-cadastro.component.css
@@ -50,6 +50,7 @@ form p-inputMask /deep/ .prime-input {
   border-radius: 8px;
   font-size: 16px;
   font-weight: 300;
+  margin: 10px 0;
   height: 40px;
   padding: 0 15px;
 }
@@ -63,6 +64,7 @@ form p-inputMask /deep/ .prime-input:focus {
 
 button {
   border: none;
+  border-radius: 8px;
   background: var(--main-green-color);
   color: var(--white);
   font-size: 18px;
@@ -73,6 +75,6 @@ button {
 }
 
 button:hover {
-  background: var(--secondary-color);
+  background: var(--secondary-green-color);
 }
 
