--- a/devagro-frontend/src/css/variaveis.css
+++ b/devagro-frontend/src/css/variaveis.css
@@ -1,5 +1,6 @@
 :root {
   --main-green-color: #375f24;
+  --secondary-green-color: #4f8636;
   --main-grey-color: #e5e5e5;
   --black: #000;
   --red: #ff4000;
