feat: create company page

--- a/devagro-frontend/src/app/core/components/auth/pages/empresa-cadastro/empresa-cadastro.component.html
+++ b/devagro-frontend/src/app/core/components/auth/pages/empresa-cadastro/empresa-cadastro.component.html
@@ -38,14 +38,14 @@
 
         <label>Senha</label>
         <input
-          type="text"
+          type="password"
           id="senha"
           placeholder="Senha"
         />
 
         <label>Digite Novamente a Senha</label>
         <input
-          type="text"
+          type="password"
           id="re-senha"
           placeholder="Senha"
         />
