test: validate password input

--- a/devagro-frontend/src/app/core/components/auth/pages/empresa-cadastro/empresa-cadastro.component.html
+++ b/devagro-frontend/src/app/core/components/auth/pages/empresa-cadastro/empresa-cadastro.component.html
@@ -46,7 +46,7 @@
         <label>Digite Novamente a Senha</label>
         <input
           type="password"
-          id="re-senha"
+          id="rep-senha"
           placeholder="Senha"
         />
         <button routerLink="/">Log In</button>
