--- a/devagro-frontend/src/app/components/admin/pages/fazendas/propriedades-cadastradas/propriedades-cadastradas.component.css
+++ b/devagro-frontend/src/app/components/admin/pages/fazendas/propriedades-cadastradas/propriedades-cadastradas.component.css
@@ -1,8 +1,9 @@
 .titulo {
   font-size: 24px;
   font-weight: bold;
+  text-align: center;
 }
-  
+
 .button-dropdown {
   background: var(--main-green-color);
   font-size: 18px;
@@ -17,7 +18,7 @@ th {
   padding-left: 40px;
   color: #252733;
 }
-  
+
 th:nth-child(2) {
   font-size: 18px;
   font-weight: bold;
@@ -25,7 +26,7 @@ th:nth-child(2) {
   padding-right: 40px;
   color: #252733;
 }
-  
+
 td {
   font-size: 20px;
   font-weight: bold;
@@ -33,7 +34,7 @@ td {
   padding-left: 40px;
   color: #0e1d8e;
 }
-  
+
 td:nth-child(2) {
   font-size: 20px;
   font-weight: bold;
@@ -41,11 +42,17 @@ td:nth-child(2) {
   padding-right: 40px;
   color: #0e1d8e;
 }
-  
+
 .fundo-tabela {
   padding: 2rem 2rem;
   box-sizing: border-box;
   border-radius: 8px;
   border: 1px solid var(--main-green-color);
   background: white;
+}
+
+p-scrollPanel /deep/ .table-scroll,
+tr {
+  display: flex;
+  justify-content: space-between;
 }
