refactor: list of employee initial changes

--- a/devagro-frontend/src/app/components/admin/pages/funcionarios/funcionario-cadastro/funcionario-cadastro.component.html
+++ b/devagro-frontend/src/app/components/admin/pages/funcionarios/funcionario-cadastro/funcionario-cadastro.component.html
@@ -1,4 +1,4 @@
-<<app-sidenav></app-sidenav>
+<app-sidenav></app-sidenav>
 <app-template-body>
 
   <h1>Funcionarios</h1>
@@ -20,10 +20,10 @@
     <p></p>
     <h2 class="descricao">TELEFONE</h2>
     <input type="number" placeholder="Telefone" class="entrada_texto" #TELEFONE (keyup)=mudar_telefone(TELEFONE.value) required>
-    
+
     <p></p>
     <h2 class="descricao">FUNÇÃO PRINCIPAL</h2>
-    <input type="Função principal"  placeholder="Função principal" class="entrada_texto" #FUNCAO_PRINCIPAL (keyup)=mudar_funcao_princila(FUNCAO_PRINCIPAL.value) required > 
+    <input type="Função principal"  placeholder="Função principal" class="entrada_texto" #FUNCAO_PRINCIPAL (keyup)=mudar_funcao_princila(FUNCAO_PRINCIPAL.value) required >
 
     <p></p>
     <h2 class="descricao">ATIVO</h2>
