--- a/devagro-frontend/src/app/components/admin/pages/funcionarios/funcionarios.component.html
+++ b/devagro-frontend/src/app/components/admin/pages/funcionarios/funcionarios.component.html
@@ -1,7 +1,7 @@
 <app-sidenav></app-sidenav>
 <app-template-body [title]="titulo">
 
-  <table class="table align-middle mb-0 bg-white">
+  <!-- <table class="table align-middle mb-0 bg-white">
     <thead class="bg-light">
       <tr>
         <th class="th-detalhe">Detalhes dos funcionários</th>
@@ -37,119 +37,7 @@
     <td class="td-ativo">
       <div *ngFor="let ativo of listAtivo" style="text-align:center" class="div-ativo">{{ativo}}</div>
     </td>
-
-
-
-
-
-
-
-
-
-
-
-       <!-- <td>
-          <div class="d-flex align-items-center">
-            <img
-                src="https://mdbootstrap.com/img/new/avatars/8.jpg"
-                alt=""
-                style="width: 45px; height: 45px"
-                class="rounded-circle"
-                />
-            <div class="ms-3">
-              <p class="fw-bold mb-1" ></p>
-              <p class="text-muted mb-0" *ngFor="let fazenda of listFazenda">{{fazenda}}</p>
-            </div>
-          </div>
-        </td>
-        <td>
-          <p class="fw-normal mb-1">Software engineer</p>
-          <p class="text-muted mb-0">IT department</p>
-        </td>
-        <td>
-          <span class="badge badge-success rounded-pill d-inline">Active</span>
-        </td>
-        <td>Senior</td>
-        <td>
-          <button type="button" class="btn btn-link btn-sm btn-rounded">
-            Edit
-          </button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <div class="d-flex align-items-center">
-            <img
-                src="https://mdbootstrap.com/img/new/avatars/6.jpg"
-                class="rounded-circle"
-                alt=""
-                style="width: 45px; height: 45px"
-                />
-            <div class="ms-3">
-              <p class="fw-bold mb-1">Alex Ray</p>
-              <p class="text-muted mb-0">alex.ray@gmail.com</p>
-            </div>
-          </div>
-        </td>
-        <td>
-          <p class="fw-normal mb-1">Consultant</p>
-          <p class="text-muted mb-0">Finance</p>
-        </td>
-        <td>
-          <span class="badge badge-primary rounded-pill d-inline"
-                >Onboarding</span
-            >
-        </td>
-        <td>Junior</td>
-        <td>
-          <button
-                  type="button"
-                  class="btn btn-link btn-rounded btn-sm fw-bold"
-                  data-mdb-ripple-color="dark"
-                  >
-            Edit
-          </button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <div class="d-flex align-items-center">
-            <img
-                src="https://mdbootstrap.com/img/new/avatars/7.jpg"
-                class="rounded-circle"
-                alt=""
-                style="width: 45px; height: 45px"
-                />
-            <div class="ms-3">
-              <p class="fw-bold mb-1">Kate Hunington</p>
-              <p class="text-muted mb-0">kate.hunington@gmail.com</p>
-            </div>
-          </div>
-        </td>
-        <td>
-          <p class="fw-normal mb-1">Designer</p>
-          <p class="text-muted mb-0">UI/UX</p>
-        </td>
-        <td>
-          <span class="badge badge-warning rounded-pill d-inline">Awaiting</span>
-        </td>
-        <td>Senior</td>
-        <td>
-          <button
-                  type="button"
-                  class="btn btn-link btn-rounded btn-sm fw-bold"
-                  data-mdb-ripple-color="dark"
-                  >
-            Edit
-          </button>
-        </td>-->
-      </tr>
-      <!--<tr *ngFor="let nome of listNome">{{nome}}
-        <td ><h1 *ngFor="let fazenda of listFazenda">{{fazenda}}</h1></td>
-        <td>I'm your second cell.</td>
-        <td>I'm your third cell.</td>
-        <td>I'm your fourth cell.</td>
-      </tr>-->
+    </tr>
     </tbody>
   </table>
 
@@ -160,6 +48,59 @@
   <button type="button" class="button" id="button-altera" routerLink="/admin/funcionarios/cadastro/alterar" >
     <span class="button_text_alterar" >Alterar Informações</span>
   </button>
-  </div>
+  </div> -->
+
+  <section class="table-container">
+    <h3>Funcionários da empresa</h3>
+    <table class="table align-middle mb-0 bg-white">
+      <thead class="bg-light">
+        <tr>
+          <th class="th-detalhe">Detalhes dos funcionários</th>
+          <th class="th-vazio"></th>
+          <th class="th-fazenda">Fazenda Alocado</th>
+          <th class="th-funcao">Função Principal</th>
+          <th class="th-ativo">Ativo</th>
+
+        </tr>
+      </thead>
+      <tbody>
+
+       <tr>
+
+         <td class="td-detalhe">
+              <div *ngFor="let nome of listNome" style="text-align:center" class="div-detalhe">{{nome}}</div>
+          </td>
+
+
+
+      <td class="td-vazio">
+          <div *ngFor="let fazenda of listFazenda" style="text-align:center" class="div-vazio"></div>
+      </td>
+
+        <td class="td-fazenda">
+          <div *ngFor="let fazenda of listFazenda" style="text-align:center" class="div-fazenda">{{fazenda}}</div>
+      </td>
+
+      <td class="td-funcao">
+        <div *ngFor="let funcao of listFuncao" style="text-align:center" class="div-funcao">{{funcao}}</div>
+      </td>
+
+      <td class="td-ativo">
+        <div *ngFor="let ativo of listAtivo" style="text-align:center" class="div-ativo">{{ativo}}</div>
+      </td>
+      </tr>
+      </tbody>
+    </table>
+  </section>
+
+  <!-- <div class="div-button">
+  <button type="button" class="button" routerLink="/admin/funcionarios/cadastro" [disabled]="aprovaCadastro == false" >
+    <span class="button__text">+</span>
+  </button>
+  <button type="button" class="button" id="button-altera" routerLink="/admin/funcionarios/cadastro/alterar" >
+    <span class="button_text_alterar" >Alterar Informações</span>
+  </button>
+  </div> -->
+
 
 </app-template-body>
