refactor: employee list to similar visual figma

--- a/devagro-frontend/src/app/components/admin/pages/funcionarios/funcionarios.component.css
+++ b/devagro-frontend/src/app/components/admin/pages/funcionarios/funcionarios.component.css
@@ -1,8 +1,86 @@
 .table-container {
   background: var(--white);
   border-radius: 8px;
-  min-width: 1120px;
-  min-height: 940px;
-  display: block;
+  width: 100%;
+  height: 940px;
   justify-content: center;
+  margin-left: 10px;
+}
+
+h3 {
+  color: var(--main-green-color);
+  font-size: 1.2rem;
+  font-weight: 700;
+  padding: 20px 20px;
+  margin: 0px 20px;
+}
+
+table {
+  width: 90%;
+  margin: 10px 40px;
+}
+
+table th {
+  font-size: 1rem;
+  font-weight: 500;
+  color: var(--grey);
+}
+
+table .table-content,
+td,
+td span,
+p-scrollPanel /deep/ .table-scroll {
+  font-size: 1rem;
+  font-weight: 300;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  text-align: justify;
+  gap: 20px;
+  margin-left: 20px;
+}
+
+.table-content.table-ajust {
+  margin-right: -40px;
+}
+
+.table-active-true {
+  width: 60px;
+  height: 20px;
+  border-radius: 100px;
+  background: var(--secondary-green-color);
+  color: var(--white);
+}
+
+.table-active-false {
+  width: 60px;
+  height: 20px;
+  border-radius: 100px;
+  background: var(--red);
+  color: var(--white);
+}
+
+p-scrollPanel /deep/ .table-scroll,
+tr {
+  display: flex;
+  justify-content: space-between;
+}
+
+.buttons {
+  margin-right: 10px;
+}
+
+.buttons button {
+  background: var(--secondary-green-color);
+  border: none;
+  border-radius: 100px;
+  bottom: 100px;
+  color: var(--white);
+  position: relative;
+  padding: 20px 30px;
+  float: right;
+  margin-right: 15px;
+  bottom: -200px;
+  z-index: 5;
 }
