--- a/devagro-frontend/src/app/components/admin/pages/funcionarios/funcionarios.component.html
+++ b/devagro-frontend/src/app/components/admin/pages/funcionarios/funcionarios.component.html
@@ -1,106 +1,93 @@
 <app-sidenav></app-sidenav>
 <app-template-body [title]="titulo">
-
-  <!-- <table class="table align-middle mb-0 bg-white">
-    <thead class="bg-light">
-      <tr>
-        <th class="th-detalhe">Detalhes dos funcionários</th>
-        <th class="th-vazio"></th>
-        <th class="th-fazenda">Fazenda Alocado</th>
-        <th class="th-funcao">Função Principal</th>
-        <th class="th-ativo">Ativo</th>
-
-      </tr>
-    </thead>
-    <tbody>
-
-     <tr>
-
-       <td class="td-detalhe">
-            <div *ngFor="let nome of listNome" style="text-align:center" class="div-detalhe">{{nome}}</div>
-        </td>
-
-
-
-    <td class="td-vazio">
-        <div *ngFor="let fazenda of listFazenda" style="text-align:center" class="div-vazio"></div>
-    </td>
-
-      <td class="td-fazenda">
-        <div *ngFor="let fazenda of listFazenda" style="text-align:center" class="div-fazenda">{{fazenda}}</div>
-    </td>
-
-    <td class="td-funcao">
-      <div *ngFor="let funcao of listFuncao" style="text-align:center" class="div-funcao">{{funcao}}</div>
-    </td>
-
-    <td class="td-ativo">
-      <div *ngFor="let ativo of listAtivo" style="text-align:center" class="div-ativo">{{ativo}}</div>
-    </td>
-    </tr>
-    </tbody>
-  </table>
-
-  <div class="div-button">
-  <button type="button" class="button" routerLink="/admin/funcionarios/cadastro" [disabled]="aprovaCadastro == false" >
-    <span class="button__text">+</span>
-  </button>
-  <button type="button" class="button" id="button-altera" routerLink="/admin/funcionarios/cadastro/alterar" >
-    <span class="button_text_alterar" >Alterar Informações</span>
-  </button>
-  </div> -->
-
   <section class="table-container">
-    <h3>Funcionários da empresa</h3>
-    <table class="table align-middle mb-0 bg-white">
-      <thead class="bg-light">
+    <h3>
+      Funcionários da empresa
+    </h3>
+    <table>
+      <thead>
         <tr>
-          <th class="th-detalhe">Detalhes dos funcionários</th>
-          <th class="th-vazio"></th>
-          <th class="th-fazenda">Fazenda Alocado</th>
-          <th class="th-funcao">Função Principal</th>
-          <th class="th-ativo">Ativo</th>
-
+          <th>
+            Detalhes dos funcionários
+          </th>
+          <th></th>
+          <th>
+            Fazenda Alocado
+          </th>
+          <th>
+            Função Principal
+          </th>
+          <th>
+            Ativo
+          </th>
         </tr>
       </thead>
       <tbody>
-
-       <tr>
-
-         <td class="td-detalhe">
-              <div *ngFor="let nome of listNome" style="text-align:center" class="div-detalhe">{{nome}}</div>
-          </td>
-
-
-
-      <td class="td-vazio">
-          <div *ngFor="let fazenda of listFazenda" style="text-align:center" class="div-vazio"></div>
-      </td>
-
-        <td class="td-fazenda">
-          <div *ngFor="let fazenda of listFazenda" style="text-align:center" class="div-fazenda">{{fazenda}}</div>
-      </td>
-
-      <td class="td-funcao">
-        <div *ngFor="let funcao of listFuncao" style="text-align:center" class="div-funcao">{{funcao}}</div>
-      </td>
-
-      <td class="td-ativo">
-        <div *ngFor="let ativo of listAtivo" style="text-align:center" class="div-ativo">{{ativo}}</div>
-      </td>
-      </tr>
+        <p-scrollPanel
+        styleClass="table-scroll"
+        [style]="{width: '100%', height: '500px'}"
+        >
+          <tr>
+            <td>
+               <div
+               class="table-content"
+               *ngFor="let nome of listNome"
+               >
+                 {{ nome }}
+               </div>
+             </td>
+             <td></td>
+             <td>
+               <div
+               class="table-content"
+               *ngFor="let fazenda of listFazenda"
+               >
+                 {{ fazenda }}
+               </div>
+             </td>
+             <td>
+               <div
+               class="table-content table-ajust"
+               *ngFor="let funcao of listFuncao"
+               >
+                 {{ funcao }}
+               </div>
+             </td>
+             <td>
+               <div
+               class="table-content"
+               *ngFor="let ativo of listAtivo"
+               >
+                 <span
+                 [ngClass]="{'table-active-true': ativo == 'sim', 'table-active-false': ativo == 'não'}"
+                 >
+                  {{ ativo }}
+                 </span>
+               </div>
+             </td>
+          </tr>
+        </p-scrollPanel>
       </tbody>
     </table>
+    <div class="buttons">
+      <button
+      type="button"
+      id="button-altera"
+      routerLink="/admin/funcionarios/cadastro/alterar"
+      >
+        <span>
+          Alterar Informações
+        </span>
+      </button>
+      <button
+      type="button"
+      routerLink="/admin/funcionarios/cadastro"
+      [disabled]="aprovaCadastro == false"
+      >
+        <span>
+          +
+        </span>
+      </button>
+    </div>
   </section>
-
-  <!-- <div class="div-button">
-  <button type="button" class="button" routerLink="/admin/funcionarios/cadastro" [disabled]="aprovaCadastro == false" >
-    <span class="button__text">+</span>
-  </button>
-  <button type="button" class="button" id="button-altera" routerLink="/admin/funcionarios/cadastro/alterar" >
-    <span class="button_text_alterar" >Alterar Informações</span>
-  </button>
-  </div> -->
-
-
 </app-template-body>
