--- a/devagro-frontend/src/app/components/admin/pages/fazendas/propriedades-cadastradas/propriedades-cadastradas.component.html
+++ b/devagro-frontend/src/app/components/admin/pages/fazendas/propriedades-cadastradas/propriedades-cadastradas.component.html
@@ -1,6 +1,6 @@
 <div class="fundo-tabela">
   <h2 class="titulo">
-    Propriedades cadastradas
+    Propriedades Cadastradas
   </h2>
   <div class="dropdown">
     <button
