--- a/devagro-frontend/src/app/components/admin/pages/funcionarios/funcionario-cadastro/funcionario-cadastro.component.css
+++ b/devagro-frontend/src/app/components/admin/pages/funcionarios/funcionario-cadastro/funcionario-cadastro.component.css
@@ -1,110 +1,135 @@
-h1{
-    color: var(--main-green-color);
+.container-create-employee {
+  background: var(--white);
+  border-radius: 8px;
+  width: 100%;
+  height: 700px;
+  text-align: center;
 }
 
-.descricao{
-    position: relative;
-    left: 5%;
-    font-size: 100%;
+.create-employee {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.quadro{
-    background-color: var(--grey-ligth);
-    width:25%;
-    border-style: solid;
-    border-color: var(--main-green-color);
-    border-radius: 5px;
-    
+.employee-content {
+  margin-top: 30px;
 }
 
-.entrada_texto{
-    border-color: var(--main-green-color);
-    border-radius: 5px;
-    width:90%;
-
-    position: relative;
-    left: 5%;
-    
+form {
+  padding: 30px;
 }
 
-.check_box{
-    position: relative;
-    left: 5%;
+form label {
+  color: var(--main-green-color);
+  display: flex;
+  text-transform: uppercase;
 }
 
-button{
-    background-color: var(--main-green-color);
-    border-color: var(--main-green-color);
-    color: var(--white);
-    border-radius: 5px;
+form input,
+form button,
+form p-inputMask /deep/ .prime-input {
+  display: block;
+  width: 100%;
+  margin-bottom: 10px;
+}
 
-    position: relative;
-    top: 3%;
-    left: 2.25%;
-    height: 5%;
-    width: 20%;
-    
-    
+form input,
+form p-inputMask /deep/ .prime-input {
+  border: solid 1.5px var(--main-green-color);
+  border-radius: 8px;
+  font-size: 16px;
+  font-weight: 300;
+  margin: 10px 0;
+  height: 40px;
+  padding: 0 15px;
+}
+
+form input:focus,
+form p-inputMask /deep/ .prime-input:focus {
+  outline: 1px solid var(--main-green-color);
+}
+
+button {
+  border: none;
+  border-radius: 8px;
+  background: var(--main-green-color);
+  color: var(--white);
+  font-size: 18px;
+  font-weight: 700;
+  height: 50px;
+  cursor: pointer;
+  margin-top: 60px;
+}
+
+button:hover {
+  background: var(--secondary-green-color);
+}
+
+.checkbox{
+  position: relative;
+  left: 5%;
 }
 
 .switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-    left:  5%;
-  }
-  
-  /* Hide default HTML checkbox */
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  /* The slider */
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  input:checked + .slider {
-    background-color: var(--main-green-color);
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px var(--main-green-color);
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-  }
-  
-  .slider.round {
-    border-radius: 34px;
-  }
-  
-  .slider.round:before {
-    border-radius: 50%;
-  }
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  margin-top: 3px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: var(--main-green-color);
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px var(--main-green-color);
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
