--- a/devagro-frontend/src/app/components/admin/pages/fazendas/fazenda-cadastro/fazenda-cadastro.component.css
+++ b/devagro-frontend/src/app/components/admin/pages/fazendas/fazenda-cadastro/fazenda-cadastro.component.css
@@ -14,7 +14,7 @@
 
 button{
   font-size: 24px;
-  background: #375F24;
+  background: var(--main-green-color);
   box-shadow: 0px 4px 12px rgba(55, 81, 255, 0.24);
   border-radius: 8px;
   margin-top: 2rem;
@@ -24,7 +24,7 @@ button{
 }
 
 button:hover {
-  background-color: #4CAF50;
+  background-color: var(--secondary-green-color);
 }
 
 input[type="date"]::-webkit-calendar-picker-indicator {
