feat: add new variable red color

--- a/devagro-frontend/src/css/variaveis.css
+++ b/devagro-frontend/src/css/variaveis.css
@@ -4,6 +4,7 @@
   --main-grey-color: #e5e5e5;
   --black: #000;
   --red: #ff4000;
+  --red-soft: #f94c66;
   --grey: #9fa0a1;
   --grey-ligth: #d1d1d1;
   --white: #fff;
