refactor: organize HTML structure

--- a/devagro-frontend/src/app/components/admin/pages/dashboard/dashboard.component.html
+++ b/devagro-frontend/src/app/components/admin/pages/dashboard/dashboard.component.html
@@ -1,16 +1,36 @@
 <section class="side-to-side">
   <div class="cards-1">
     <div class="container">
-      <h4><b>Total de propriedades instaladas</b></h4>
-      <p class="valor">{{qtdeFazendas}}</p>
-      <p class="valor" *ngIf="qtdeFazendas == null">0</p>
+      <h4>
+        <b>
+          Total de propriedades instaladas
+        </b>
+      </h4>
+      <p class="valor">
+        {{ qtdeFazendas }}
+      </p>
+      <p class="valor"
+      *ngIf="qtdeFazendas == null"
+      >
+        0
+      </p>
     </div>
   </div>
   <div class="cards-1">
     <div class="container">
-      <h4><b>Total de funcionários</b></h4>
-      <p class="valor">{{qtdeFuncionarios}}</p>
-      <p class="valor" *ngIf="qtdeFuncionarios == null">0</p>
+      <h4>
+        <b>
+          Total de funcionários
+        </b>
+      </h4>
+      <p class="valor">
+        {{ qtdeFuncionarios }}
+      </p>
+      <p class="valor"
+      *ngIf="qtdeFuncionarios == null"
+      >
+        0
+      </p>
     </div>
   </div>
 </section>
@@ -20,12 +40,20 @@
 <section class="side-bottom">
   <div class="card-3">
     <div class="container-table">
-      <h4><b>Previsão do tempo propriedades</b></h4>
+      <h4>
+        <b>
+          Previsão do tempo propriedades
+        </b>
+      </h4>
       <table class="tg-temp">
         <thead>
           <tr>
-            <th class="tg-temp-cly1">Santa Catarina</th>
-            <th class="tg-temp-nrix">30 ºC</th>
+            <th class="tg-temp-cly1">
+              Santa Catarina
+            </th>
+            <th class="tg-temp-nrix">
+              30 ºC
+            </th>
             <th class="tg-temp-nrix">
               <i>
                 <svg
@@ -46,8 +74,12 @@
         </thead>
         <tbody>
           <tr>
-            <td class="tg-temp-cly1">Sorocaba</td>
-            <td class="tg-temp-nrix">26 ºC</td>
+            <td class="tg-temp-cly1">
+              Sorocaba
+            </td>
+            <td class="tg-temp-nrix">
+              26 ºC
+            </td>
             <td class="tg-temp-nrix">
               <i
                 ><svg
@@ -66,8 +98,12 @@
             </td>
           </tr>
           <tr>
-            <td class="tg-temp-cly1">Cerrado Mineiro</td>
-            <td class="tg-temp-nrix">22 ºC</td>
+            <td class="tg-temp-cly1">
+              Cerrado Mineiro
+            </td>
+            <td class="tg-temp-nrix">
+              22 ºC
+            </td>
             <td class="tg-temp-nrix">
               <i
                 ><svg
